# lanhack-web

./: .gitattributes  .gitignore  README.md  backend.nix  elm.json  flake.nix  frontend.nix  pyproject.toml
app/: __main__.py  main.py
backend/: websocket.py
backend/data/: storage.py
backend/models/: api.py  ingest.py
backend/routes/: api.py  base.py  ingest.py
frontend/routes/: pages.py
frontend/static/: Main.elm  index.html  index.js  main.js  websocket.js
frontend/static/css/: container.css
frontend/templates/: index.html
lanhackbackend/: __init__.py  __main__.py  main.py  requirements.txt  routes.py
lanhackbackend/api/: routes.py
lanhackbackend/api/data/: storage.py  uid-format-test.json
lanhackbackend/api/routes/: base.py  ingest.py
lanhackfrontend/: Main.elm  index.html  main.js  page.py  pages.py
lanhackfrontend/routes/: pages.py
