[tool.poetry]
name = "lanhackbackend"
version = "0.1.0"
description = ""
authors = ["Isaac <the456gamer@the456gamer.dev>"]
readme = "README.md"
packages = [{include = "lanhackbackend"}, {include = "lanhackfrontend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
jinja2 = ">=2.11.2"

[tool.poetry.scripts]
lanhackbackend = "lanhackbackend.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
