[tool.poetry]
name = "lanhackweb"
version = "0.1.0"
description = ""
authors = ["Isaac <the456gamer@the456gamer.dev>"]
readme = "README.md"
packages = [{include = "backend"}, {include = "frontend"}, {include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
jinja2 = ">=2.11.2"
websockets = "^12.0"

[tool.poetry.scripts]
lanhackweb = "app.main:main"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
watchfiles = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
